# secret-query-permits

./: .gitignore  README.md
contract/: Cargo.toml  Makefile
contract/examples/: schema.rs
contract/schema/: execute_msg.json
contract/src/: contract.rs  msg.rs  state.rs
node/: .env  create_card.js  index.js  package-lock.json  package.json  upload.js
query-permits/: package-lock.json  package.json
query-permits/src/: App.js
