[workspace]
resolver = "2"

[package]
name = "secret_business_card_demo"
version = "0.1.0"
authors = ["seanrad"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
snafu = { version = "0.8.5" }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
schemars = "0.8.21"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11", features = [
] }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
secret-toolkit = { version = "0.10.2", default-features = false, features = [
  "viewing-key",
  "crypto", 
  "permit",
  "storage",
  "utils",
  "snip20",
] }
base64 = "0.22.1"

[dev-dependencies]
cosmwasm-schema = "2.2.0"
